fix: footer grid layout issue

--- a/assets/css/unminified/main.css
+++ b/assets/css/unminified/main.css
@@ -341,6 +341,9 @@ th {
   .ast-width-md-66 {
     width: 66.6666666667%;
   }
+}
+
+@media (min-width: 769px) {
   .ast-width-md-20 {
     width: 20%;
   }
