--- a/sass/grid/_grid-flex.scss
+++ b/sass/grid/_grid-flex.scss
@@ -83,9 +83,12 @@
         &-width-md-66{
           width: 66.6666666667%;
         }
+    }
+    
+    @media (min-width: $mx-col-md + 1) {
         &-width-md-20{
           width: 20%;
-        }
+      }
     }
 
     @media (min-width: $mx-col-lg) {
